# libRacv

./: .cproject  .project  CMakeLists.txt  libRacv.cpp  libRacv.doxyfile  licence
colorNormalization/: greyworld.cpp
doc/html/: BackgroundSubstraction_8hpp.html  BackgroundSubstraction_8hpp_source.html  BodyDetect_8hpp.html  BodyDetect_8hpp_source.html  DataSaviour_8hpp.html  DebugPipe_8hpp.html  Detector_8hpp.html  DrawRectangles_8hpp.html  ExtractRectangles_8hpp.html  Gray_8hpp.html  Gray_8hpp_source.html  Pipe_8hpp.html  Pipe_8hpp_source.html  Reservoir_8hpp.html  Reservoir_8hpp_source.html  ShowFrames_8hpp.html  ShowFrames_8hpp_source.html  SwitchPipe_8hpp.html  Track_8hpp.html  WriteFrames_8hpp.html  WriteVideo_8hpp.html  annotated.html  classes.html  classracv_1_1BackgroundSubstraction-members.html  classracv_1_1BackgroundSubstraction.html  classracv_1_1BodyDetect-members.html  classracv_1_1BodyDetect.html  classracv_1_1DataSaviour-members.html  classracv_1_1DataSaviour.html  classracv_1_1DebugPipe-members.html  classracv_1_1DebugPipe.html  classracv_1_1Detector-members.html  classracv_1_1Detector.html  classracv_1_1DrawRectangles-members.html  classracv_1_1DrawRectangles.html  classracv_1_1ExtractRectangles-members.html  classracv_1_1ExtractRectangles.html  classracv_1_1Gray.html  (+57 more)
include/: Person.hpp  color.hpp  detection.hpp  libRacv.hpp  matrix.hpp  person.hpp  points.hpp  rectangle.hpp  video.hpp
src/: Grabcut.cpp  Person.cpp  Point.cpp  Rect.cpp  Roi.cpp  color.cpp  detection.cpp  matrix.cpp  person.cpp  points.cpp  rectangle.cpp  skinprop.cpp  video.cpp
(+176 files in other folders)
